--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 
   <servlet-mapping>
     <servlet-name>hello</servlet-name>
-    <url-pattern>/hello</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
   <servlet>
