--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,19 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     version="2.5">
 
-    <welcome-file-list>
+  <!--
+  <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+  </welcome-file-list>
+  -->
     
   <servlet>
-    <servlet-name>hello</servlet-name>
+    <servlet-name>front</servlet-name>
     <servlet-class>com.example.HelloServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>hello</servlet-name>
+    <servlet-name>front</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
