--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,16 +10,6 @@
         <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   -->
-    
-  <servlet>
-    <servlet-name>front</servlet-name>
-    <servlet-class>com.example.HelloServlet</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>front</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
 
   <servlet>
       <servlet-name>jersey-services</servlet-name>
@@ -33,10 +23,30 @@
           <param-value>true</param-value>
       </init-param>
   </servlet>
+  
+  <servlet>
+    <servlet-name>front</servlet-name>
+    <servlet-class>com.example.FrontServlet</servlet-class>
+  </servlet>
+    
+  <servlet>
+    <servlet-name>root</servlet-name>
+    <servlet-class>com.example.RootServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>jersey-services</servlet-name>
     <url-pattern>/services/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>front</servlet-name>
+    <url-pattern>/q/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>root</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
 
