--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,20 @@
   -->
 
   <servlet>
-      <servlet-name>jersey-services</servlet-name>
+      <servlet-name>api</servlet-name>
+      <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+      <init-param>
+          <param-name>com.sun.jersey.config.property.packages</param-name>
+          <param-value>com.example.services</param-value>
+      </init-param>
+      <init-param>
+          <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+          <param-value>true</param-value>
+      </init-param>
+  </servlet>
+
+  <servlet>
+      <servlet-name>ajax</servlet-name>
       <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
       <init-param>
           <param-name>com.sun.jersey.config.property.packages</param-name>
@@ -35,8 +48,13 @@
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>jersey-services</servlet-name>
-    <url-pattern>/services/*</url-pattern>
+    <servlet-name>api</servlet-name>
+    <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>ajax</servlet-name>
+    <url-pattern>/ajax/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
