fix directory structures and add lib

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
 
   <servlet-mapping>
     <servlet-name>front</servlet-name>
-    <url-pattern>/q/*</url-pattern>
+    <url-pattern>/dp/*</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
