--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>postgresql</groupId>
+        	<artifactId>postgresql</artifactId>
+        	<version>9.1-901.jdbc4</version>
+        </dependency>
 	</dependencies>
 
 	<build>
