--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,19 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- postgresql -->
         <dependency>
         	<groupId>postgresql</groupId>
         	<artifactId>postgresql</artifactId>
         	<version>9.1-901.jdbc4</version>
+        </dependency>
+
+        <!-- mysql -->
+        <dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>5.1.6</version>
         </dependency>
 	</dependencies>
 
