update jar version

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
         	<groupId>com.example</groupId>
         	<artifactId>foobar</artifactId>
-        	<version>1.0.1</version>
+        	<version>1.0.2-rc1</version>
         </dependency>
 	</dependencies>
 
