fix maven warnings

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
     <repositories>
         <repository>
-            <id>local</id>
-            <name>local repo</name>
+            <id>projectlocal</id>
+            <name>project local repo</name>
             <url>file://${basedir}/lib</url>
         </repository>
     </repositories>
@@ -106,7 +106,9 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
